--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr auto 1fr;
+  grid-template-areas: 
+  "header header header"
+  "body body body"
+  "footer footer footer";
+  
+  height: 100vh;
+
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
