--- a/src/Body/Body.css
+++ b/src/Body/Body.css
@@ -6,11 +6,8 @@
     justify-content: space-between;
     align-items: center;
 
-    height: 80vh;
+    height: 100%;
+    padding: 2rem;
 
     background-color: rgb(245, 233, 255);
-}
-
-.container-for-list-emoji {
-
 }
