--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#root {
+  height: 100vh;
+}
 
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr auto 1fr;
+  grid-template-rows: 10vh auto 10vh;
   grid-template-areas: 
   "header header header"
   "body body body"
   "footer footer footer";
   
-  height: 100vh;
+  height: 100%;
 
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
